--- a/src/TFG.RulesPenaltiesF1.Web/Views/Seasons/Details.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Seasons/Details.cshtml
@@ -49,6 +49,9 @@
                 <th>
                     Circuit
                 </th>
+                <th>
+                    State
+                </th>
             </tr>
         </thead>
         <tbody>
@@ -65,6 +68,9 @@
                 </td>
                 <td>
                     <a href="/Circuits/Details/@(competition.CircuitId)" target="_blank">@competition.Circuit!.Name</a>
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => competition.CompetitionState.Name)
                 </td>
             </tr>
             }
