Añadido enlace para volver a la temporada de una competición

--- a/src/TFG.RulesPenaltiesF1.Web/Views/Competitions/Details.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Competitions/Details.cshtml
@@ -43,3 +43,6 @@
         </form>
     }
 </div>
+<div>
+    <a asp-controller="Seasons" asp-action="Details" asp-route-id="@Model.SeasonId">Back to Season @Model.Year</a>
+</div>
