POST de participaciones añadido

--- a/src/TFG.RulesPenaltiesF1.Web/Views/Competitions/Details.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Competitions/Details.cshtml
@@ -57,6 +57,37 @@
     }
 <hr/>
 
+    @if(Model.Participations.Count > 0)
+    {
+        <h4>Participations</h4>
+
+         <table class="table mt-1">
+            <thead>
+                <tr>
+                    <th>
+                        Driver
+                    </th>
+                    <th>
+                        Team
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach(var participation in Model.Participations)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(s => participation.Driver!.Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(s => participation.Competitor!.Name)
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    }
+
     @if (canAddParticipation)
     {
         <a href="/Participations/Create/@Model.Id" class="btn btn-success" tabindex="-1" role="button" aria-disabled="true">Add Participation</a>
