--- a/src/TFG.RulesPenaltiesF1.Web/Views/Competitions/Details.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Competitions/Details.cshtml
@@ -1,10 +1,11 @@
 ﻿@using Microsoft.AspNetCore.Identity;
+@using TFG.RulesPenaltiesF1.Core.Entities.CompetitionAggregate;
+@using TFG.RulesPenaltiesF1.Core.Entities.Users;
 @using TFG.RulesPenaltiesF1.Infrastructure.Identity;
 @using TFG.RulesPenaltiesF1.Web.Interfaces;
 @model CompetitionViewModel
 @inject ICompetitionViewModelService _viewModelService
 @inject UserManager<ApplicationUser> _userManager
-
 @inject ICompetitionViewModelService Service
 
 @{
@@ -14,10 +15,16 @@
     var currentUser = await _userManager.GetUserAsync(User);
 
     bool canAddParticipation = false;
+    bool canAdvance = false;
 
     if (currentUser is not null)
     {
         canAddParticipation = await _viewModelService.CanAddParticipation(Model.Id, currentUser.Id);
+
+        if(await _userManager.IsInRoleAsync(currentUser, UserRole.Steward.ToString()))
+        {
+            canAdvance = true;
+        }
     }
 }
 
@@ -107,7 +114,7 @@
                         State
                     </th>
                     <th>
-                        Manage
+
                     </th>
                 </tr>
             </thead>
@@ -122,7 +129,15 @@
                             @Html.DisplayFor(s => session.State!.Name)
                         </td>
                         <td>
-
+                            @if(!session.State.Equals(SessionStateEnum.Finished) && canAdvance)
+                            {
+                                canAdvance = false;
+                                <form asp-action="Advance" asp-route-id="@Model.Id">
+                                    <div class="form-group">
+                                        <input type="submit" value="Advance" class="btn btn-info" id="submit" />
+                                    </div>
+                                </form>
+                            }
                         </td>
                     </tr>
                 }
