solo se puede avanzar si cada equipo ha declarado sus participaciones

--- a/src/TFG.RulesPenaltiesF1.Web/Views/Competitions/Details.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Competitions/Details.cshtml
@@ -6,7 +6,6 @@
 @model CompetitionViewModel
 @inject ICompetitionViewModelService _viewModelService
 @inject UserManager<ApplicationUser> _userManager
-@inject ICompetitionViewModelService Service
 
 @{
     ViewData["Title"] = $"{Model.Name} - {Model.Year}";
@@ -21,7 +20,7 @@
     {
         canAddParticipation = await _viewModelService.CanAddParticipation(Model.Id, currentUser.Id);
 
-        if(await _userManager.IsInRoleAsync(currentUser, UserRole.Steward.ToString()))
+        if(await _userManager.IsInRoleAsync(currentUser, UserRole.Steward.ToString()) && await _viewModelService.CanAdvanceSession(Model.Id))
         {
             canAdvance = true;
         }
@@ -56,7 +55,7 @@
             @Html.DisplayFor(model => model.CompetitionState.Name)
         </dd>
     </dl>
-    @if(await Service.CanStartCompetition(Model.Id))
+    @if(await _viewModelService.CanStartCompetition(Model.Id))
     {
         <form action="/Competitions/StartCompetition/@Model.Id/" method="post">
             <button type="submit" class="btn btn-success">Start Competition</button>
