Cambios en ViewModel y versión inicial funcional vista Create Incident

--- a/src/TFG.RulesPenaltiesF1.Web/Views/Incidents/Create.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Incidents/Create.cshtml
@@ -10,8 +10,8 @@
 
 <h1>Add Incident</h1>
 
-<h4>GP Bahrein - 2023</h4>
-<h5>Race</h5>
+<h4>@competition.Name - @competition.Year</h4>
+<h5>@Model.Session!.Type</h5>
 <hr />
 
 <div class="row">
