--- a/src/TFG.RulesPenaltiesF1.Web/Views/Articles/Create.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Articles/Create.cshtml
@@ -25,7 +25,7 @@
                 {
                     <div class="subarticle">
                         <label for="SubArticles_@(n+1)__Content" style="display: block; margin-bottom: 5px;">Subarticle @(n+1):</label>
-                        <textarea name="SubArticles[@n].Content" id="SubArticles_@(n)__Content" asp-for="@subArticle.Content" class="form-control" id="subArticle_Content name="subArticle.Content"></textarea>
+                        <textarea name="SubArticles[@n].Content" id="SubArticles_@(n)__Content" asp-for="@subArticle.Content" class="form-control" id="subArticle_Content" name="subArticle.Content"></textarea>
                         <span asp-validation-for="@Model.SubArticles[@n].Content" class="text-danger"></span>
                     </div>
 
