--- a/src/TFG.RulesPenaltiesF1.Web/Views/Incidents/Create.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Incidents/Create.cshtml
@@ -21,6 +21,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group mt-4">
                 <input type="hidden" asp-for="CompetitionId" value="@Model.CompetitionId" />
+                <input type="hidden" asp-for="SessionId" value="@Model.SessionId" />
                 @Html.LabelFor(m => m.ParticipationId, new { })
                 @{
 
