--- a/src/TFG.RulesPenaltiesF1.Web/Views/Competitions/Details.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Competitions/Details.cshtml
@@ -30,7 +30,7 @@
     }
 }
 
-<h1>@Model.Name - 2023</h1>
+<h1>@Model.Name - @Model.Year</h1>
 
 <div>
     <hr/>
@@ -155,6 +155,57 @@
                             }
                         </td>
                     </tr>
+                }
+            </tbody>
+        </table>
+    }
+
+    @if(Model.Sessions.Any(s => s.Incidents.Count > 0))
+    {
+        <h4>Incidents</h4>
+
+        <table class="table mt-1">
+            <thead>
+                <tr>
+                    <th>
+                        Session
+                    </th>
+                    <th>
+                        Driver
+                    </th>
+                    <th>
+                        Competitor
+                    </th>
+                    <th>
+                        Decission
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach(var session in Model.Sessions)
+                {
+                    @foreach(var incident in session.Incidents)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(s => session.Type!.Name)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(i => incident.Driver!.Name)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(i => incident.Competitor!.Name)
+                            </td>
+                            @if(incident.Penalty is null)
+                            {
+                                <td>No further action</td>
+                            }
+                            else
+                            {
+                                <td>@Html.DisplayFor(i => incident.Penalty.Name)</td>
+                            }
+                        </tr>
+                    }
                 }
             </tbody>
         </table>
