--- a/src/TFG.RulesPenaltiesF1.Web/Views/Competitions/Details.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Competitions/Details.cshtml
@@ -61,7 +61,7 @@
             @Html.DisplayFor(model => model.CompetitionState.Name)
         </dd>
     </dl>
-    @if(await _viewModelService.CanStartCompetition(Model.Id))
+    @if(isSteward && await _viewModelService.CanStartCompetition(Model.Id))
     {
         <form action="/Competitions/StartCompetition/@Model.Id/" method="post">
             <button type="submit" class="btn btn-success">Start Competition</button>
