--- a/src/TFG.RulesPenaltiesF1.Web/Views/Incidents/Details.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Incidents/Details.cshtml
@@ -39,12 +39,15 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Fact)
         </dd>
-        <dt class="col-sm-2">
-            Infringment
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Article!.Content)
-        </dd>
+        @if(Model.Article is not null)
+        {
+            <dt class="col-sm-2">
+                Infringment
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Article!.Content)
+            </dd>
+        }
         <dt class="col-sm-2">
             Decision
         </dt>
