--- a/src/TFG.RulesPenaltiesF1.Web/Views/Home/Index.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Home/Index.cshtml
@@ -5,6 +5,9 @@
 <div class="text-center">
 	<h1 class="display-4">Rules & Penalties in F1</h1>
 </div>
-<p class="text-justify">This is Web Application's target is to manage the regulations and penalties in F1.<br/>
-		It has been developed using BDD, DDD and TDD as software development technologies.
+<p class="text-justify">
+    The aim of this project is to develop a web application to manage the regulations and penalties in Formula One, as well as the course of the seasons, competitions, and sessions in which those penalties can be imposed.
+</p>
+<p class="text-justify">
+    The app has been developed using ASP.NET Core MVC, with Scrum as agile framework and using DDD and BDD as software development approaches. It's been built using a Clean architecture, applying good practices in the development of quality software following design principles and patterns.
 </p>
