--- a/src/TFG.RulesPenaltiesF1.Web/Views/Circuits/Index.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Circuits/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Circuits - Index</h1>
+<h1>Circuits</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -50,9 +50,7 @@
                 @Html.DisplayFor(modelItem => item.YearFirstGP)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a>
             </td>
         </tr>
 }
