--- a/src/TFG.RulesPenaltiesF1.Web/Views/Regulations/Index.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Regulations/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Regulations";
 }
 
-<h1>Regulations - Index</h1>
+<h1>Regulations</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
